crates/anvil-parser/tests/snapshots/extract_snapshots__async_provides_method_unwraps_promise_to_inner_key.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "database-module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "DatabaseModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./pool",
                            original: Some(
                                "./pool",
                            ),
                        },
                        name: "Pool",
                        type_args: [],
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "DatabaseModule",
                        },
                        method: "pool",
                        is_async: true,
                    },
                    scope: Singleton,
                    deps: [
                        Class {
                            module: ModulePath {
                                abs: "./config",
                                original: Some(
                                    "./config",
                                ),
                            },
                            name: "Config",
                            type_args: [],
                        },
                    ],
                    source: SourceSpan {
                        path: "database-module.ts",
                        start: 221,
                        end: 366,
                    },
                    role: None,
                    token_inner_type: None,
                },
            ],
            source: SourceSpan {
                path: "database-module.ts",
                start: 186,
                end: 376,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
