crates/anvil-parser/tests/snapshots/extract_snapshots__component_with_modules_and_entry_points.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "coffee_shop.ts",
    modules: [],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "CoffeeShop",
            },
            modules: [
                ClassRef {
                    module: ModulePath {
                        abs: "./coffee_module",
                        original: Some(
                            "./coffee_module",
                        ),
                    },
                    name: "CoffeeModule",
                },
            ],
            scope: Singleton,
            entry_points: [
                EntryPoint {
                    name: "pump",
                    key: Class {
                        module: ModulePath {
                            abs: "./pump",
                            original: Some(
                                "./pump",
                            ),
                        },
                        name: "Pump",
                        type_args: [],
                    },
                    source: SourceSpan {
                        path: "coffee_shop.ts",
                        start: 326,
                        end: 348,
                    },
                    factory_params: [],
                },
                EntryPoint {
                    name: "heater",
                    key: Class {
                        module: ModulePath {
                            abs: "./heater",
                            original: Some(
                                "./heater",
                            ),
                        },
                        name: "Heater",
                        type_args: [],
                    },
                    source: SourceSpan {
                        path: "coffee_shop.ts",
                        start: 361,
                        end: 387,
                    },
                    factory_params: [],
                },
            ],
            source: SourceSpan {
                path: "coffee_shop.ts",
                start: 286,
                end: 397,
            },
        },
    ],
    subcomponents: [],
    inject_classes: [],
}
