crates/anvil-parser/tests/snapshots/extract_snapshots__entry_point_with_set_return_type_parses.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "app.ts",
    modules: [],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "App",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "plugins",
                    key: Set {
                        element: Class {
                            module: ModulePath {
                                abs: "./plugin",
                                original: Some(
                                    "./plugin",
                                ),
                            },
                            name: "Plugin",
                            type_args: [],
                        },
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 180,
                        end: 212,
                    },
                    factory_params: [],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 147,
                end: 222,
            },
        },
    ],
    subcomponents: [],
    inject_classes: [],
}
