crates/anvil-parser/tests/snapshots/extract_snapshots__generic_inject_param_uses_key_with_type_args.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "user-service.ts",
    modules: [],
    components: [],
    subcomponents: [],
    inject_classes: [
        Binding {
            key: Class {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "UserService",
                type_args: [],
            },
            provider: InjectCtor {
                class: ClassRef {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "UserService",
                },
            },
            scope: Unscoped,
            deps: [
                Class {
                    module: ModulePath {
                        abs: "./repository",
                        original: Some(
                            "./repository",
                        ),
                    },
                    name: "Repository",
                    type_args: [
                        Class {
                            module: ModulePath {
                                abs: "./user",
                                original: Some(
                                    "./user",
                                ),
                            },
                            name: "User",
                            type_args: [],
                        },
                    ],
                },
            ],
            source: SourceSpan {
                path: "user-service.ts",
                start: 203,
                end: 249,
            },
            role: None,
            token_inner_type: None,
        },
    ],
}
