crates/anvil-parser/tests/snapshots/extract_snapshots__generic_provides_extracts_key_with_type_args.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "user-module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "UserModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./repository",
                            original: Some(
                                "./repository",
                            ),
                        },
                        name: "Repository",
                        type_args: [
                            Class {
                                module: ModulePath {
                                    abs: "./user",
                                    original: Some(
                                        "./user",
                                    ),
                                },
                                name: "User",
                                type_args: [],
                            },
                        ],
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "UserModule",
                        },
                        method: "users",
                        is_async: false,
                    },
                    scope: Unscoped,
                    deps: [],
                    source: SourceSpan {
                        path: "user-module.ts",
                        start: 214,
                        end: 325,
                    },
                    role: None,
                    token_inner_type: None,
                },
            ],
            source: SourceSpan {
                path: "user-module.ts",
                start: 183,
                end: 335,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
