crates/anvil-parser/tests/snapshots/extract_snapshots__inject_ctor_with_dep.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "pump.ts",
    modules: [],
    components: [],
    subcomponents: [],
    inject_classes: [
        Binding {
            key: Class {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "Pump",
            },
            provider: InjectCtor {
                class: ClassRef {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "Pump",
                },
            },
            scope: Unscoped,
            deps: [
                Class {
                    module: ModulePath {
                        abs: "./heater",
                        original: Some(
                            "./heater",
                        ),
                    },
                    name: "Heater",
                },
            ],
            source: SourceSpan {
                path: "pump.ts",
                start: 149,
                end: 187,
            },
            role: None,
        },
    ],
}
