crates/anvil-parser/tests/snapshots/extract_snapshots__module_with_binds_method.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "heater_module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "HeaterModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./heater",
                            original: Some(
                                "./heater",
                            ),
                        },
                        name: "Heater",
                        type_args: [],
                    },
                    provider: Binds {
                        target: Class {
                            module: ModulePath {
                                abs: "./electric_heater",
                                original: Some(
                                    "./electric_heater",
                                ),
                            },
                            name: "ElectricHeater",
                            type_args: [],
                        },
                    },
                    scope: Unscoped,
                    deps: [
                        Class {
                            module: ModulePath {
                                abs: "./electric_heater",
                                original: Some(
                                    "./electric_heater",
                                ),
                            },
                            name: "ElectricHeater",
                            type_args: [],
                        },
                    ],
                    source: SourceSpan {
                        path: "heater_module.ts",
                        start: 224,
                        end: 295,
                    },
                    role: None,
                    token_inner_type: None,
                },
            ],
            source: SourceSpan {
                path: "heater_module.ts",
                start: 191,
                end: 305,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
