crates/anvil-parser/tests/snapshots/extract_snapshots__subcomponent_factory_with_typed_parameters.snap
---
source: crates/anvil-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "app.ts",
    modules: [],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "App",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "requestComponent",
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "RequestComponent",
                        type_args: [],
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 421,
                        end: 502,
                    },
                    factory_params: [
                        FactoryParam {
                            name: "req",
                            key: Class {
                                module: ModulePath {
                                    abs: "<self>",
                                    original: None,
                                },
                                name: "HttpRequest",
                                type_args: [],
                            },
                            source: SourceSpan {
                                path: "app.ts",
                                start: 447,
                                end: 463,
                            },
                        },
                        FactoryParam {
                            name: "res",
                            key: Class {
                                module: ModulePath {
                                    abs: "<self>",
                                    original: None,
                                },
                                name: "HttpResponse",
                                type_args: [],
                            },
                            source: SourceSpan {
                                path: "app.ts",
                                start: 465,
                                end: 482,
                            },
                        },
                    ],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 388,
                end: 512,
            },
        },
    ],
    subcomponents: [
        SubcomponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "RequestComponent",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "handler",
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "RequestHandler",
                        type_args: [],
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 290,
                        end: 325,
                    },
                    factory_params: [],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 244,
                end: 335,
            },
        },
    ],
    inject_classes: [],
}
